Improve WbpSourceChordPhrase harmony compatibility check: now check all degrees vs phrase including 3rd and fifth.